<resources>
    <string name="app_name">ActivityLifecycleMethodCalls</string>
    <string name="first_activity">first Activity</string>
    <string name="next_activity">next Activity</string>
    <string name="second_activity">Second Activity</string>
    <string name="start_service">start service</string>
    <string name="stop_service">stop service</string>
    <string name="service_started">Service started!!</string>
    <string name="service_stopped">Service stopped!!</string>
    <string name="space_for_timing">space for timing</string>
    <string name="enter_first_number">first number</string>
    <string name="add">ADD</string>
    <string name="enter_second_number">second_number</string>
</resources>
