<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
<TextView
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:text="@string/first_activity"
    android:padding="70dp"
    android:textSize="21sp"
    android:textAlignment="center"
    xmlns:android="http://schemas.android.com/apk/res/android" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/next_activity"
        android:onClick="onClick"/>
    <TextView
        android:id="@+id/service_started"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="21sp"
        android:text="@string/service_started"
        android:textColor="#A0AF00"
        android:visibility="gone"
        android:textAlignment="center"/>
    <TextView
        android:id="@+id/service_stopped"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="21sp"
        android:text="@string/service_stopped"
        android:textAlignment="center"
        android:textColor="#FF0000"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <Button
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:text="@string/start_service"
        android:layout_weight="1"
        android:onClick="startServiceDesired"/>
    <Button
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:text="@string/stop_service"
        android:layout_weight="1"
        android:onClick="stopServiceRequested"/>
    </LinearLayout>
    
</LinearLayout>