<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/second_activity"
        android:textSize="21sp"
        android:textAlignment="center"
        android:padding="70dp"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <EditText
        android:id="@+id/number_one"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:textSize="21sp"
        android:hint="@string/enter_first_number"
        android:inputType="number"
        android:padding="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"/>
    <EditText
        android:id="@+id/number_two"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:textSize="21sp"
        android:hint="@string/enter_second_number"
        android:inputType="number"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:padding="5dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:onClick="addWhenClicked"/>
    </LinearLayout>
    <TextView
        android:id="@+id/result"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:textAlignment="center"
        android:textSize="21sp"/>
</LinearLayout>